2010-08-26  Miroslaw Szymanski  <miroslaw.s@samsung.com>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Added new callback when view's size is changed to fix issue with changing layout size
        https://bugs.webkit.org/show_bug.cgi?id=44337

        * ewk/ewk_view.cpp:
        (_ewk_view_smart_calculate):

Canonical link: https://commits.webkit.org/56883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66111 268f45cc-cd09-0410-ab3c-d52691b4dbfc