WebKit/efl/ewk/ewk_view.cpp
@@ -796,6 +796,9 @@ static void _ewk_view_smart_calculate(Evas_Object* o)
         sd->changed.frame_rect = EINA_TRUE;
         sd->view.w = w;
         sd->view.h = h;
+
+        // This callback is a good place e.g. to change fixed layout size (ewk_view_fixed_layout_size_set).
+        evas_object_smart_callback_call(o, "view,resized", 0);
     }
     sd->changed.size = EINA_FALSE;
 
