WebKit/efl/ewk/ewk_view.h
@@ -88,6 +88,7 @@ extern "C" {
  *  - "icon,received", void: main frame received an icon.
  *  - "viewport,changed", void: Report that viewport has changed.
  *  - "inputmethods,changed" with a boolean indicating whether it's enabled or not.
+ *  - "view,resized", void: view object's size has changed.
  */
 
 typedef struct _Ewk_View_Smart_Data Ewk_View_Smart_Data;
